--- a/participant-services/providers/crowding/pom.xml
+++ b/participant-services/providers/crowding/pom.xml
@@ -118,6 +118,17 @@
 			        </execution>
 			    </executions>
 			</plugin>
+
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                
+                <configuration>
+                    <outputDirectory>${project.basedir}/../war/</outputDirectory>
+                    <warName>${project.artifactId}</warName>
+                </configuration>
+            </plugin>
 		</plugins>
 		<finalName>crowding</finalName>
 	</build>
