--- a/sia-endpoints-client/pom.xml
+++ b/sia-endpoints-client/pom.xml
@@ -162,6 +162,13 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>it.univaq.incipict.mid1.sia.endpoints.client.SiaEndpointsClientApp</mainClass>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 </project>
